[package]
name = "isu"
version = "0.1.0"
edition = "2024"
authors = ["cryptopatrick <cryptopatrick@gmail.com>"]
description = "Rust implementation of Information State Update theory, applicable in Issue-Based Dialogue Management and Conversational Agent Architecture."
documentation = "https://docs.rs/isu"
homepage = "https://github.com/cryptopatrick/isu"
repository = "https://github.com/cryptopatrick/isu"
readme = "README.md"
keywords = ["isu", "ai", "dialogue", "agent", "nlp"]
categories = ["command-line-utilities"]
license = "Unlicense/MIT"
autotests = false

[lib]
name = "isu"
path = "src/lib.rs"

#[bin]
#name = "isu"
#path = "src/main.rs"


[[test]]
name = "tests"
path = "tests/tests.rs"

#[[bench]]
#name = "bench"
#path = "tests/bench.rs"
#
#[profile.bench]
#opt-level = 3


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg = "0.9"