[package]
name = "isu"
version = "0.1.5"
edition = "2024"
authors = ["cryptopatrick <cryptopatrick@gmail.com>"]
description = "Rust implementation of Information State Update theory, applicable in Issue-Based Dialogue Management and Conversational Agent Architecture."
documentation = "https://docs.rs/isu"
homepage = "https://github.com/cryptopatrick/isu"
repository = "https://github.com/cryptopatrick/isu"
readme = "README.md"
keywords = ["isu", "ai", "dialogue", "agent", "nlp"]
categories = ["command-line-utilities"]
license = "Unlicense/MIT"
autotests = false

[lib]
name = "isu"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
criterion = "0.5"
proptest = "1.0"
cfg = "0.9"